--- a/index.html
+++ b/index.html
@@ -11,235 +11,221 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
+body { background-color: #020617; color: #f8fafc; font-family: 'Plus Jakarta Sans', sans-serif; scroll-behavior: smooth; }
+.glass { background: rgba(255,255,255,0.03); backdrop-filter: blur(15px); border: 1px solid rgba(255,255,255,0.1); }
+.gradient-text { background: linear-gradient(90deg,#60a5fa,#a855f7); -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
 
-body {
-  background-color: #020617;
-  color: #f8fafc;
-  font-family: 'Plus Jakarta Sans', sans-serif;
-  scroll-behavior: smooth;
-}
-
-.glass {
-  background: rgba(255, 255, 255, 0.03);
-  backdrop-filter: blur(15px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.gradient-text {
-  background: linear-gradient(90deg, #60a5fa, #a855f7);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-#timerContainer {
-  background: #ffffff;
-  color: #020617;
-  box-shadow: 0 10px 40px rgba(0,0,0,0.8);
-  border: 3px solid #3b82f6;
-  z-index: 1000;
-}
+#timerContainer { background:#ffffff; color:#020617; box-shadow:0 10px 40px rgba(0,0,0,0.8); border:3px solid #3b82f6; z-index:1000; }
+.timer-warning { animation:flicker 1s infinite; border:3px solid #ef4444 !important; color:#b91c1c !important; }
+.timer-stop { background-color:#991b1b !important; color:#ffffff !important; border:3px solid #f87171 !important; }
+@keyframes flicker { 0%,100%{background:#fff;} 50%{background:#fca5a5;} }
 </style>
 </head>
 
 <body onload="startTimer()">
 
-<!-- TIMER -->
 <div id="timerContainer" class="fixed bottom-10 right-10 px-8 py-4 rounded-3xl flex items-center gap-4 transition-all">
-  <i class="fas fa-hourglass-start text-blue-600 text-2xl" id="timerIcon"></i>
-  <span id="displayTime" class="text-4xl font-black font-mono tracking-tighter">00:00</span>
+<i class="fas fa-hourglass-start text-blue-600 text-2xl" id="timerIcon"></i>
+<span id="displayTime" class="text-4xl font-black font-mono tracking-tighter">00:00</span>
 </div>
 
-<!-- NAVBAR (UNCHANGED STYLE) -->
 <nav class="fixed w-full z-50 glass border-b border-slate-800/50 px-8 py-4 flex justify-between items-center">
-  <div class="flex items-center gap-4">
-    <div class="bg-white p-1 rounded flex items-center justify-center shadow-md" style="height: 48px; width: 48px;">
-      <img src="https://via.placeholder.com/50?text=MUJ" class="h-full w-auto object-contain">
-    </div>
-    <div class="flex flex-col text-left">
-      <span class="text-xl font-black text-white leading-none uppercase tracking-tighter">
-        PBL <span class="text-blue-500 italic">2026</span>
-      </span>
-      <span class="text-[9px] text-slate-400 font-bold uppercase tracking-widest mt-1">
-        Dept. of Computer Science & Engineering
-      </span>
-    </div>
-  </div>
+<div class="flex items-center gap-4">
+<div class="bg-white p-1 rounded shadow-md" style="height:48px;width:48px;"></div>
+<div class="flex flex-col text-left">
+<span class="text-xl font-black text-white uppercase tracking-tight">PBL <span class="text-blue-500 italic">2026</span></span>
+<span class="text-[9px] text-slate-400 font-bold uppercase tracking-widest mt-1">Dept. of Computer Science & Engineering</span>
+</div>
+</div>
 
-  <div class="hidden md:flex gap-8 text-[11px] uppercase tracking-widest font-bold opacity-70">
-    <a href="#problem" class="hover:text-blue-400 transition">Problem</a>
-    <a href="#methodology" class="hover:text-blue-400 transition">Methodology</a>
-    <a href="#results" class="hover:text-blue-400 transition">Results</a>
-    <a href="#team" class="hover:text-blue-400 transition">Team</a>
-  </div>
+<div class="hidden md:flex gap-8 text-[11px] uppercase tracking-widest font-bold opacity-70">
+<a href="#problem" class="hover:text-blue-400 transition">Problem</a>
+<a href="#methodology" class="hover:text-blue-400 transition">Methodology</a>
+<a href="#results" class="hover:text-blue-400 transition">Results</a>
+<a href="#team" class="hover:text-blue-400 transition">Team</a>
+</div>
 </nav>
 
 <main class="max-w-6xl mx-auto px-6 pt-48 pb-32 space-y-32">
 
-<!-- HERO -->
 <section class="text-center">
-  <div class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
-    ID: 2427030497
-  </div>
+<div class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
+ID: 2427030497
+</div>
 
-  <h1 class="text-6xl md:text-7xl font-extrabold mb-8 uppercase leading-tight">
-    <span class="gradient-text">LifeSafe</span>
-  </h1>
+<h1 class="text-6xl md:text-7xl font-extrabold mb-8 uppercase leading-tight">
+<span class="gradient-text">LifeSafe</span>
+</h1>
 
-  <p class="text-slate-400 max-w-2xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
-    A secure, decentralized healthcare management platform that enhances patient data privacy, transparency, and access control.
-  </p>
+<p class="text-slate-400 max-w-2xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
+A decentralized healthcare record management system that ensures secure data storage,
+granular access control, and transparent medical history tracking using blockchain concepts.
+</p>
 </section>
 
-<!-- PROBLEM -->
 <section id="problem" class="grid md:grid-cols-2 gap-12 items-stretch">
-  <div class="glass p-10 rounded-[2.5rem] flex flex-col justify-center border-l-4 border-blue-600">
-    <h2 class="text-3xl font-extrabold mb-6">Problem Statement</h2>
-    <p class="text-slate-400 leading-relaxed text-justify">
-      Traditional healthcare systems rely on centralized databases vulnerable to cyberattacks, data manipulation, and limited interoperability. Patients lack full control over who accesses their medical records. LifeSafe addresses this by proposing a blockchain-inspired architecture that enables secure storage, granular access control, and transparency.
-    </p>
-  </div>
+<div class="glass p-10 rounded-[2.5rem] border-l-4 border-blue-600">
+<h2 class="text-3xl font-extrabold mb-6">Problem Statement</h2>
+<p class="text-slate-400 leading-relaxed text-justify">
+Traditional healthcare systems rely on centralized databases that are vulnerable to breaches,
+data tampering, and lack patient-controlled access. LifeSafe addresses these limitations by
+introducing secure, transparent, and decentralized patient record management.
+</p>
+</div>
 
-  <div class="space-y-6">
-    <div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
-      <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">Literature Review</h3>
-      <p class="text-sm text-slate-500 italic">
-        Existing blockchain-based healthcare solutions focus on immutability and decentralization but often lack practical usability and scalable access models.
-      </p>
-    </div>
+<div class="space-y-6">
+<div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
+<h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">
+Literature Review / Market Research
+</h3>
+<p class="text-sm text-slate-500 italic">
+Existing EHR systems lack transparency and granular consent mechanisms.
+Blockchain-based approaches improve integrity but often lack usability.
+</p>
+</div>
 
-    <div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
-      <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">Research Gap</h3>
-      <p class="text-sm text-slate-500 italic">
-        Current systems do not integrate patient-controlled permissions, emergency access protocols, and real-world interface usability in one unified system.
-      </p>
-    </div>
-  </div>
+<div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
+<h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">
+Research Gap / Innovation
+</h3>
+<p class="text-sm text-slate-500 italic">
+LifeSafe integrates consent tokenization, encrypted off-chain storage,
+and decentralized identity to enhance security and patient autonomy.
+</p>
+</div>
+</div>
 </section>
 
-<!-- METHODOLOGY -->
 <section id="methodology" class="space-y-12">
-  <h2 class="text-4xl font-black text-center uppercase tracking-tight">
-    System <span class="text-blue-500">Methodology</span>
-  </h2>
+<h2 class="text-4xl font-black text-center uppercase tracking-tight">
+System <span class="text-blue-500">Methodology</span>
+</h2>
 
-  <div class="grid md:grid-cols-3 gap-8">
-    <div class="glass p-8 rounded-3xl text-center">
-      <i class="fas fa-database text-blue-500 text-3xl mb-4"></i>
-      <h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Frontend Layer</h3>
-      <p class="text-sm text-slate-500">
-        React.js based modular interface for patient and record management.
-      </p>
-    </div>
+<div class="grid md:grid-cols-3 gap-8">
+<div class="glass p-8 rounded-3xl text-center">
+<i class="fas fa-database text-blue-500 text-3xl mb-4"></i>
+<h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Architecture</h3>
+<p class="text-sm text-slate-500">
+React frontend, secure local state management, modular record handling system.
+</p>
+</div>
 
-    <div class="glass p-8 rounded-3xl text-center">
-      <i class="fas fa-microchip text-purple-500 text-3xl mb-4"></i>
-      <h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Data Architecture</h3>
-      <p class="text-sm text-slate-500">
-        Structured digital record storage with future Ethereum + IPFS integration.
-      </p>
-    </div>
+<div class="glass p-8 rounded-3xl text-center">
+<i class="fas fa-shield-alt text-purple-500 text-3xl mb-4"></i>
+<h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Security Model</h3>
+<p class="text-sm text-slate-500">
+Simulated blockchain logic with access control, consent tracking,
+and encrypted record concept implementation.
+</p>
+</div>
 
-    <div class="glass p-8 rounded-3xl text-center border-2 border-green-500/20 bg-green-500/5">
-      <i class="fas fa-lock text-green-500 text-3xl mb-4"></i>
-      <h3 class="font-bold mb-4 uppercase text-xs tracking-widest text-green-400">Security Model</h3>
-      <p class="text-sm text-slate-500">
-        Role-based access control and encryption-ready blockchain architecture.
-      </p>
-    </div>
-  </div>
+<div class="glass p-8 rounded-3xl text-center border-2 border-green-500/20 bg-green-500/5">
+<i class="fab fa-github text-green-500 text-3xl mb-4"></i>
+<h3 class="font-bold mb-4 uppercase text-xs tracking-widest text-green-400">
+View Source Code
+</h3>
+<a href="https://github.com/shreyas-002/pbl_project"
+target="_blank"
+class="px-6 py-2 bg-green-600 rounded-full text-[10px] font-black hover:bg-green-500 transition shadow-lg shadow-green-900/40">
+VIEW PROJECT REPOSITORY
+</a>
+</div>
+</div>
 </section>
 
-<!-- RESULTS -->
 <section id="results" class="glass p-12 rounded-[3.5rem] border-t-4 border-blue-500">
-  <h2 class="text-3xl font-black mb-12 text-center uppercase tracking-tight">
-    Results & Analysis
-  </h2>
+<h2 class="text-3xl font-black mb-12 text-center uppercase tracking-tight">
+Results & <span class="text-blue-500">Analysis</span>
+</h2>
 
-  <div class="grid md:grid-cols-2 gap-16 items-center">
-    <div class="h-80">
-      <canvas id="resultsChart"></canvas>
-    </div>
+<div class="grid md:grid-cols-2 gap-16 items-center">
+<div class="h-80">
+<canvas id="resultsChart"></canvas>
+</div>
 
-    <div class="space-y-6">
-      <div class="p-6 rounded-2xl bg-white/5 flex justify-between items-center border border-white/10 shadow-inner">
-        <span class="text-slate-400 font-bold uppercase text-xs tracking-widest">System Efficiency</span>
-        <span class="text-blue-400 font-mono font-black text-3xl">92%</span>
-      </div>
+<div class="space-y-6">
+<div class="p-6 rounded-2xl bg-white/5 flex justify-between items-center border border-white/10 shadow-inner">
+<span class="text-slate-400 font-bold uppercase text-xs tracking-widest">
+Security Improvement
+</span>
+<span class="text-blue-400 font-mono font-black text-3xl">+30%</span>
+</div>
 
-      <p class="text-slate-500 text-sm italic text-justify leading-relaxed">
-        The LifeSafe prototype demonstrates improved record organization, access transparency, and secure patient data handling compared to traditional centralized systems.
-      </p>
-    </div>
-  </div>
+<p class="text-slate-500 text-sm italic text-justify leading-relaxed">
+Compared to traditional centralized systems, LifeSafe demonstrates
+improved integrity, transparency, and access accountability.
+</p>
+</div>
+</div>
 </section>
 
-<!-- TEAM -->
 <section id="team" class="text-center pt-10 border-t border-slate-900">
-  <h2 class="text-[10px] font-black text-slate-600 uppercase tracking-[0.5em] mb-12">
-    Academic Credits
-  </h2>
+<h2 class="text-[10px] font-black text-slate-600 uppercase tracking-[0.5em] mb-12">
+Academic Credits
+</h2>
 
-  <div class="flex flex-wrap justify-center gap-10">
+<div class="flex flex-wrap justify-center gap-10">
+<div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-blue-600">
+<p class="text-[9px] font-bold text-blue-500 mb-2 uppercase tracking-widest">Project Guide</p>
+<p class="font-black text-xl text-slate-100">Dr. Ankit Shrivastava</p>
+</div>
 
-    <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-blue-600">
-      <p class="text-[9px] font-bold text-blue-500 mb-2 uppercase tracking-widest">Project Guide</p>
-      <p class="font-black text-xl text-slate-100">Dr Ankit Shrivastava</p>
-    </div>
-
-    <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-slate-700">
-      <p class="text-[9px] font-bold text-slate-400 mb-2 uppercase tracking-widest">Developer</p>
-      <p class="font-black text-xl text-slate-100">Shreyas Shrivastava</p>
-      <p class="text-[10px] text-slate-500 mt-1">2427030497</p>
-    </div>
-
-  </div>
+<div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-slate-700">
+<p class="text-[9px] font-bold text-slate-400 mb-2 uppercase tracking-widest">Team Member</p>
+<p class="font-black text-xl text-slate-100">Shreyas Shrivastava</p>
+<p class="text-[10px] text-slate-500 mt-1">2427030497</p>
+</div>
+</div>
 </section>
 
 </main>
 
-<!-- FOOTER (UNCHANGED) -->
 <footer class="py-12 text-center bg-black/40 border-t border-slate-900">
-  <p class="text-slate-600 text-[10px] font-bold tracking-[0.3em] uppercase mb-2">
-    Manipal University Jaipur
-  </p>
-  <p class="text-slate-500 text-[9px] font-medium tracking-[0.2em] uppercase opacity-50">
-    Department of Computer Science & Engineering • 2026
-  </p>
+<p class="text-slate-600 text-[10px] font-bold tracking-[0.3em] uppercase mb-2">
+Manipal University Jaipur
+</p>
+<p class="text-slate-500 text-[9px] font-medium tracking-[0.2em] uppercase opacity-50">
+Department of Computer Science & Engineering • 2026
+</p>
 </footer>
 
 <script>
-let sec = 0;
-function startTimer() {
-  setInterval(() => {
-    sec++;
-    let m = Math.floor(sec / 60);
-    let s = sec % 60;
-    document.getElementById('displayTime').innerText =
-      `${m.toString().padStart(2, '0')}:${s.toString().padStart(2, '0')}`;
-  }, 1000);
+let sec=0;
+let timer=null;
+function startTimer(){
+timer=setInterval(()=>{
+sec++;
+let m=Math.floor(sec/60);
+let s=sec%60;
+document.getElementById('displayTime').innerText=
+`${m.toString().padStart(2,'0')}:${s.toString().padStart(2,'0')}`;
+if(sec>=600){
+clearInterval(timer);
+}
+},1000);
 }
 
-const ctx = document.getElementById('resultsChart').getContext('2d');
-new Chart(ctx, {
-  type: 'bar',
-  data: {
-    labels: ['Traditional System', 'LifeSafe'],
-    datasets: [{
-      data: [65, 92],
-      backgroundColor: ['#1e293b', '#3b82f6'],
-      borderRadius: 15,
-      barThickness: 50
-    }]
-  },
-  options: {
-    responsive: true,
-    maintainAspectRatio: false,
-    plugins: { legend: { display: false } },
-    scales: {
-      y: { beginAtZero: true, ticks: { color: '#475569' } },
-      x: { ticks: { color: '#475569' } }
-    }
-  }
+const ctx=document.getElementById('resultsChart').getContext('2d');
+new Chart(ctx,{
+type:'bar',
+data:{
+labels:['Traditional System','LifeSafe'],
+datasets:[{
+data:[70,100],
+backgroundColor:['#1e293b','#3b82f6'],
+borderRadius:15,
+barThickness:50
+}]
+},
+options:{
+responsive:true,
+maintainAspectRatio:false,
+plugins:{legend:{display:false}},
+scales:{
+y:{beginAtZero:true,grid:{color:'#ffffff05'},ticks:{color:'#475569'}},
+x:{grid:{display:false},ticks:{color:'#475569'}}
+}
+}
 });
 </script>
 
